hello-world-added-image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="caravel-small.jpg" alt="caravel"
+style="width:50%;max-width:600px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file</p>
 
