--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 style="width:50%;max-width:600px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file</p>
+<p>this line is here to show how merging work</p>
 
 </body>
 </html> 
