--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="caravel-small.jpg" alt="caravel"
-style="width:50%;max-width:600px"></div>
+<div>
+<img src="caravel-small.jpg" alt="caravel"
+style="width:50%;max-width:600px">
+</div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file</p>
-<p>this line is here to show how merging work</p>
+
+<div>
+<img src="earth-small.jpg" alt="world" style="width:50%;max-width:400px">
+</div>
 
 </body>
-</html> 
+</html>
+ 
