--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ style="width:50%;max-width:600px">
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file</p>
 <p>le 26 avril, essai avec remote repo</p>
+<p>le 27 avril, sur une nouvelle branch on remote</p>
 <div>
 <img src="earth-small.jpg" alt="world" style="width:50%;max-width:400px">
 </div>
