--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ style="width:50%;max-width:600px">
 <div>
 <img src="earth-small.jpg" alt="world" style="width:50%;max-width:400px">
 </div>
+ <p>un nouveau text</p>
 
 </body>
 </html>
